@@ -1,3 +1,8 @@
+2010-09-21  Colin Watson  <cjwatson@ubuntu.com>
+
+	* grub-core/commands/hashsum.c (GRUB_MOD_INIT): Make "Compute or
+	check hash checksum." consistently translatable.
+
 2010-09-21  Yves Blusseau  <blusseau@zetam.org>
 
 	* conf/Makefile.common (CPPFLAGS_GNULIB): Replace $(top_srcdir) with
